--- a/internship.html
+++ b/internship.html
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/04MCo0odNZ/Intern-Policy-Planning'>Intern, Policy Planning - United Nations Foundation - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/04MCo0odNZ/Intern-Policy-Planning'>Intern, Policy Planning - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -249,7 +249,7 @@
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CDPROJEKTRED/743999692020482-administrative-office-intern'>CD PROJEKT RED Administrative Office Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CDPROJEKTRED/743999692020482-administrative-office-intern'>CD PROJEKT RED Administrative Office Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -269,7 +269,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/thehavasgroup/job/o3JCafwi'>The Havas Group Careers - Fall 2019 Creative Intern-HSE</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/thehavasgroup/job/o3JCafwi'>The Havas Group Careers - Fall 2019 Creative Intern-HSE</a></h5> 
 <p><span class="badge badge-light">Atlanta Atlanta Atlanta Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -398,7 +398,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
+<h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -408,7 +408,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
+<h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
